start page content
This is just so it is not so stupidely empty.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/start-grid.html
+++ b/app/assets/javascripts/app/routes/start-grid.html
@@ -1,7 +1,97 @@
 <div class="container-fluid">
+  <div class="jumbotron">
+    <h1>Mohican's sample app</h1>
+    <h2>Let's see what Mohican can do</h2>
+    <p><a class="btn btn-primary btn-lg" href="https://github.com/zmilojko/id5" role="button" target="_blank">Check us out on GitHub</a></p>
+  </div>
   <div class="row">
-    <div class="col-xs-12 col-sm-6 mn-content-panel">
-      Mohican's sample app
+    <div class="col-xs-12 col-sm-6">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h3>What is Mohican?</h3>
+          <p><strong>Mohican is a UI Framework</strong> that uses Angular and Bootstrap to
+            make your back end application fly on the front end. It's Angular directives
+            and services make it very simple to present back end documents on front end.
+            Eager loading will load the the documents <strong>before</strong> you need them,
+            and its grid will let you filter, sort and select them with a speed of thought.</p>
+          </div>
+        </div>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h4>Mohican menu <span class="label label-warning">Still under development!</span></h4>
+          <ul>
+            <li><strong>Mohican menu </strong> is a specialized Boostrab navbar that services
+              Mohican purpose. It will work flawlessly on any display size by collapsing and
+              reappearing as space allows.</li>
+            <li>You can add your own menu items and group them to any depth.</li>
+            <li>If space allows, items are shown as a standard menu, once collapsed
+              they are shown as accordion.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h4>Mohican grid</h4>
+          <ul>
+            <li><strong>Mohican grid </strong> is a table like presentation of a collaction
+              of documents</li>
+            <li>It took only 15 HTML tags to craete the Orders grid page in our example, yet
+              it includes:</li>
+              <ul>
+                <li>Pager for page navigation</li>
+                <li>Sorting by clicking the header</li>
+                <li>Filtering loaded documents by field or fields</li>
+                <li>Context sensitive popup menu</li>
+                <li>Dialogs for quick operations</li>
+                <li>In-grid document editing</li>
+                <li>User-specific and back-end controlled column layout</li>
+                <li>User-specific and back-end controlled filters</li>
+              </ul>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-6">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h4>Mohican forms</h4>
+          <p><strong>Mohican forms are for detailed document viewing and editing.</strong></p>
+          <ul>
+            <li>Bootstrap forms allow pleasent UX design and state management.</li>
+            <li>Transaction based document statemanagement and full frontend rollback.</li>
+            <li>Tabbed design for documents with many details.</li>
+            <li>Subdocument grid views, in tabs or not.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h4>Up and coming! <span class="label label-success">New features!</span></h4>
+          <ul>
+            <li>Document creation, editing, destruction.</li>
+            <li>Notifications</li>
+            <li>Document pre-loading filtering</li>
+            <li>User management</li>
+          </ul>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h4>How to start?</h4>
+          <p><strong>We are ready to make the apps.</strong></p>
+          <ul>
+            <li>Get sample data ready and put it in a database.</li>
+            <li>Get API done.</li>
+            <li>Make menus.</li>
+            <li>Make grid per document.</li>
+            <li>Make form per document.</li>
+            <li>Build document relations.</li>
+            <li>Build content.</li>
+            <li>Deploy.</li>
+          </ul>
+          <p class="text-danger"><strong>And how about some tests?</strong></p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
