front page continues: better jumbotron
These changes should show responsiveness of the design and
zero-CSS work.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/start-grid.html
+++ b/app/assets/javascripts/app/routes/start-grid.html
@@ -1,8 +1,27 @@
 <div class="container-fluid">
   <div class="jumbotron">
-    <h1>Mohican's sample app</h1>
-    <h2>Let's see what Mohican can do</h2>
-    <p><a class="btn btn-primary btn-lg" href="https://github.com/zmilojko/id5" role="button" target="_blank">Check us out on GitHub</a></p>
+    <div class="row">
+      <div class="col-md-7">
+        <h1>Mohican</h1>
+        <h2>Let's see what Mohican can do</h2>
+        <a class="btn btn-primary btn-lg" href="https://github.com/zmilojko/id5" role="button" target="_blank">Check us out on GitHub</a>
+      </div>
+      <div class="hidden-xs hidden-sm col-md-5">
+        <div class="panel panel-default">
+          <div class="panel-heading"><h3 class="panel-title">Demo App</h3></div>
+          <div class="panel-body">
+            <ul>
+              <li>Menu with three resources</li>
+              <li>One to one and one to meny relations</li>
+              <li>Huge demo document collections</li>
+              <li>Editing and saving as in real system</li>
+              <li>Eager loading and quick fitlering</li>
+              <li>Context sensitive menus and dialogs</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="row">
     <div class="col-xs-12 col-sm-6">
@@ -72,6 +91,7 @@
             <li>Notifications</li>
             <li>Document pre-loading filtering</li>
             <li>User management</li>
+            <li>CSS-free development using bootstrap only! <span class="label label-danger">Needs a bit of a budget!</span></li>
           </ul>
         </div>
       </div>
