better panels, colors
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/start-grid.html
+++ b/app/assets/javascripts/app/routes/start-grid.html
@@ -7,7 +7,7 @@
         <a class="btn btn-primary btn-lg" href="https://github.com/zmilojko/id5" role="button" target="_blank">Check us out on GitHub</a>
       </div>
       <div class="hidden-xs hidden-sm col-md-5">
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
           <div class="panel-heading"><h3 class="panel-title">Demo App</h3></div>
           <div class="panel-body">
             <ul>
@@ -25,9 +25,9 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-sm-6">
-      <div class="panel panel-default">
+      <div class="panel panel-primary">
+        <div class="panel-heading"><h3 class="panel-title">What is Mohican?</h3></div>
         <div class="panel-body">
-          <h3>What is Mohican?</h3>
           <p><strong>Mohican is a UI Framework</strong> that uses Angular and Bootstrap to
             make your back end application fly on the front end. It's Angular directives
             and services make it very simple to present back end documents on front end.
@@ -35,9 +35,9 @@
             and its grid will let you filter, sort and select them with a speed of thought.</p>
           </div>
         </div>
-      <div class="panel panel-default">
+      <div class="panel panel-info">
+        <div class="panel-heading"><h4 class="panel-title">Mohican menu <span class="label label-warning">Still under development!</span></h4></div>
         <div class="panel-body">
-          <h4>Mohican menu <span class="label label-warning">Still under development!</span></h4>
           <ul>
             <li><strong>Mohican menu </strong> is a specialized Boostrab navbar that services
               Mohican purpose. It will work flawlessly on any display size by collapsing and
@@ -48,9 +48,9 @@
           </ul>
         </div>
       </div>
-      <div class="panel panel-default">
+      <div class="panel panel-info">
+        <div class="panel-heading"><h4 class="panel-title">Mohican grid</h4></div>
         <div class="panel-body">
-          <h4>Mohican grid</h4>
           <ul>
             <li><strong>Mohican grid </strong> is a table like presentation of a collaction
               of documents</li>
@@ -71,9 +71,9 @@
       </div>
     </div>
     <div class="col-xs-12 col-sm-6">
-      <div class="panel panel-default">
+      <div class="panel panel-info">
+        <div class="panel-heading"><h4 class="panel-title">Mohican forms</h4></div>
         <div class="panel-body">
-          <h4>Mohican forms</h4>
           <p><strong>Mohican forms are for detailed document viewing and editing.</strong></p>
           <ul>
             <li>Bootstrap forms allow pleasent UX design and state management.</li>
@@ -83,9 +83,9 @@
           </ul>
         </div>
       </div>
-      <div class="panel panel-default">
+      <div class="panel panel-info">
+        <div class="panel-heading"><h4 class="panel-title">Up and coming! <span class="label label-success">New features!</span></h4></div>
         <div class="panel-body">
-          <h4>Up and coming! <span class="label label-success">New features!</span></h4>
           <ul>
             <li>Document creation, editing, destruction.</li>
             <li>Notifications</li>
@@ -95,9 +95,9 @@
           </ul>
         </div>
       </div>
-      <div class="panel panel-default">
+      <div class="panel panel-info">
+        <div class="panel-heading"><h4 class="panel-title">How to start?</h4></div>
         <div class="panel-body">
-          <h4>How to start?</h4>
           <p><strong>We are ready to make the apps.</strong></p>
           <ul>
             <li>Get sample data ready and put it in a database.</li>
