cleanup: arrow for table sort
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -20,8 +20,9 @@
             {{field.header}}
           </span>
           <span ng-show="grid.owner.stateMachine.column === field.name && grid.owner.fullyLoaded && !grid.onlySelectedItemsShown"
-                ng-class="grid.owner.stateMachine.direction === 'desc' ? 'accenTriangleUp' : 'accenTriangleDown'"
-                aria-hidden="true"></span>
+                ng-class="grid.owner.stateMachine.direction === 'desc' ? 'glyphicon-chevron-up' : 'glyphicon-chevron-down'"
+                class="glyphicon"
+                ></span>
         </th>
         <th class="grid-header-container"></th>
         <th class="grid-header-container"></th>
