further css cleanup
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -1,4 +1,4 @@
-<div class="scrollable-frame">
+<div class="mn-grid">
   <table class="table table-striped" style="table-layout:fixed;">
     <colgroup>
       <col ng-show="grid.showSelectColumn" style="width: 30px;"/>
