--- a/app/assets/javascripts/app/routes/orders-doc.html
+++ b/app/assets/javascripts/app/routes/orders-doc.html
@@ -3,8 +3,7 @@
     <div class="col-xs-12 mn-content-panel">
       <span class="loader block" ng-if="!ctrl.itemForm" style="margin: 0px 0px 0px 8px;">Loading...</span>
       <div ng-if="ctrl.itemForm" class="container-fluid">
-        <mnf-form mnf-doc="ctrl.itemForm"
-                  mnf-crud-shown="ctrl.fullyLoaded">
+        <mnf-form mnf-doc="ctrl.itemForm">
           <div class="col-xs-12 mn-buttons-group">
             <mnf-edit></mnf-edit>
             <mnf-commit></mnf-commit>
