--- a/app/assets/javascripts/app/routes/orders-doc.html
+++ b/app/assets/javascripts/app/routes/orders-doc.html
@@ -28,7 +28,7 @@
                     mn-content-changed="ctrl.itemForm['_order_handlers_changed']">
               <mnf-form-grid mnf-crud-shown="ctrl.itemForm._state === 'editing' || ctrl.itemForm._state === 'changed'">
                 <mn-grid owner="ctrl.handlersDrv">
-                  <a ui-sref="users-form({ itemPrimaryKeyId: item.user_ref })">
+                  <a ui-sref="users-doc({ itemPrimaryKeyId: item.user_ref })">
                     <i class="fa fa-file-text-o fa-2x icoNormal"></i>
                   </a>
                   <mnf-edit-grid mnf-doc="item"></mnf-edit-grid>
@@ -42,7 +42,7 @@
                     mn-content-changed="ctrl.itemForm['_order_items_changed']">
               <mnf-form-grid mnf-crud-shown="ctrl.itemForm._state === 'editing' || ctrl.itemForm._state === 'changed'">
                 <mn-grid owner="ctrl.productsDrv">
-                  <a ui-sref="products-form({ itemPrimaryKeyId: item.product_ref })">
+                  <a ui-sref="products-doc({ itemPrimaryKeyId: item.product_ref })">
                     <i class="fa fa-file-text-o fa-2x icoNormal"></i>
                   </a>
                   <mnf-edit-grid mnf-doc="item"></mnf-edit-grid>
