--- a/app/assets/javascripts/app/routes/users-index.html
+++ b/app/assets/javascripts/app/routes/users-index.html
@@ -11,7 +11,7 @@
                mn-on-select="ctrl.onItemSelect(selectedItems)"
                mn-popup="ctrl.popup(clickedItem, selectedItems)"
                mn-grid-fill-height="true">
-        <a ui-sref="products-form({ itemPrimaryKeyId: item[ctrl.primaryKeyName] })">
+        <a ui-sref="users-doc({ itemPrimaryKeyId: item[ctrl.primaryKeyName] })">
           <i class="fa fa-file-text-o fa-2x icoNormal"></i>
         </a>
       </mn-grid>
