move all features from acitivites to orders
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -19,9 +19,22 @@
           <mnf-commit-grid mnf-doc="item"></mnf-commit-grid>
           <mnf-rollback-grid mnf-doc="item"></mnf-rollback-grid>
           <mnf-delete-grid mnf-doc="item"></mnf-delete-grid>
+          <a target="_blank" ng-href="{{ctrl.reportLocation}}/report_{{item.Order_ID}}.pdf">
+            <i class="fa fa-file-pdf-o fa-2x icoNormal hvRed"></i>
+          </a>
+          <a target="_blank" ng-href="{{ctrl.reportLocation}}/report_{{item.Order_ID}}.xls">
+            <i class="fa fa-file-excel-o fa-2x icoNormal hvGreen"></i>
+          </a>
+          <a target="_blank" ng-href="{{ctrl.reportLocation}}/report_{{item.Order_ID}}.xml">
+            <i class="fa fa-file-code-o fa-2x icoNormal hvBlue"></i>
+          </a>
+          <a target="_blank" ng-click="ctrl.printMe(item)">
+            <i class="fa fa-print fa-2x icoNormal"></i>
+          </a>
         </mn-grid>
       </mnf-form-grid>
     </div>
   </div>
+  <iframe id="print-f" name="print-f" src="" style="display:none;"></iframe>
 </div>
 <mn-dialog-sorcerer/>
