glyphs, not awesome: first change
Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mnf-reference/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference/template.html
@@ -16,9 +16,7 @@
       <span class="col-sm-11 mn-form-control ref-edit-label">
         {{mnfDoc._edit[mnfField]}}
       </span>
-      <a class="col-sm-1 btn btn-link">
-        <i class="fa fa-pencil-square-o icoNormal"></i>
-      </a>
+      <span class="glyphicon glyphicon-pencil"></span>
     </div>
   </div>
 </div>
