--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12">
-      <mn-filter-bar />
+      <mn-filter-bar></mn-filter-bar>
     </div>
   </div>
   <div class="mn-grid-layout-row row">
