remove font awesome
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/activities-index.html
+++ b/app/assets/javascripts/app/routes/activities-index.html
@@ -12,7 +12,7 @@
                mn-popup="ctrl.popup(clickedItem, selectedItems)">
         <span ui-sref="activities-doc({ itemPrimaryKeyId: item[ctrl.primaryKeyName] })"
               class="mn-action-icon glyphicon glyphicon-folder-open"></span>
-        <a target="_blank" ng-href="{{ctrl.reportLocation}}/report_{{item.Order_ID}}.pdf">
+        <!-- <a target="_blank" ng-href="{{ctrl.reportLocation}}/report_{{item.Order_ID}}.pdf">
           <i class="fa fa-file-pdf-o fa-2x icoNormal hvRed"></i>
         </a>
         <a target="_blank" ng-href="{{ctrl.reportLocation}}/report_{{item.Order_ID}}.xls">
@@ -23,7 +23,7 @@
         </a>
         <a target="_blank" ng-click="ctrl.printMe(item)">
           <i class="fa fa-print fa-2x icoNormal"></i>
-        </a>
+        </a> -->
       </mn-grid>
     </div>
   </div>
