--- a/app/assets/javascripts/mohican/directives/mnf-reference/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference/template.html
@@ -16,7 +16,7 @@
       <span class="col-sm-11 mn-form-control ref-edit-label">
         {{mnfDoc._edit[mnfField]}}
       </span>
-      <span class="glyphicon glyphicon-pencil"></span>
+      <span class="glyphicon glyphicon-folder-open"></span>
     </div>
   </div>
 </div>
