--- a/app/assets/javascripts/app/routes/orders-doc.html
+++ b/app/assets/javascripts/app/routes/orders-doc.html
@@ -28,7 +28,7 @@
               <mnf-form-grid mnf-crud-shown="ctrl.itemForm._state === 'editing' || ctrl.itemForm._state === 'changed'">
                 <mn-grid owner="ctrl.handlersDrv">
                   <span ui-sref="users-doc({ itemPrimaryKeyId: item.user_ref })"
-                        class="mn-action-icon glyphicon glyphicon-folder-open"></span>
+                        class="mn-action-icon glyphicon glyphicon-open"></span>
                   <mnf-edit-grid mnf-doc="item"></mnf-edit-grid>
                   <mnf-commit-grid mnf-doc="item"></mnf-commit-grid>
                   <mnf-rollback-grid mnf-doc="item"></mnf-rollback-grid>
@@ -41,7 +41,7 @@
               <mnf-form-grid mnf-crud-shown="ctrl.itemForm._state === 'editing' || ctrl.itemForm._state === 'changed'">
                 <mn-grid owner="ctrl.productsDrv">
                   <span ui-sref="products-doc({ itemPrimaryKeyId: item.product_ref })"
-                        class="mn-action-icon glyphicon glyphicon-folder-open"></span>
+                        class="mn-action-icon glyphicon glyphicon-open"></span>
                   <mnf-edit-grid mnf-doc="item"></mnf-edit-grid>
                   <mnf-commit-grid mnf-doc="item"></mnf-commit-grid>
                   <mnf-rollback-grid mnf-doc="item"></mnf-rollback-grid>
