--- a/app/assets/javascripts/mohican/directives/mnf-edit-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-edit-grid/template.html
@@ -1,4 +1,3 @@
-<a ng-if="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'ready' || mnfDoc._state === 'deleting')"
-   ng-click="editItem()">
-  <i class="fa fa-pencil-square-o fa-2x icoNormal"></i>
-</a>
+<span ng-click="editItem()"
+      ng-if="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'ready' || mnfDoc._state === 'deleting')"
+      class="mn-action-icon glyphicon glyphicon-pencil"></span>
