--- a/app/assets/javascripts/mohican/directives/mnf-rollback-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-rollback-grid/template.html
@@ -1,4 +1,3 @@
-<a ng-if="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
-   ng-click="rollbackItem()">
-  <i class="fa fa-ban fa-2x icoNormal"></i>
-</a>
+<span ng-click="rollbackItem()"
+      ng-if="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
+      class="mn-action-icon glyphicon glyphicon-remove-circle"></span>
