subdocs commit and delete layout
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnf-delete-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-delete-grid/template.html
@@ -1,5 +1,6 @@
 <span ng-click="confirmDelete()"
-      ng-if="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'ready')"
+      ng-if="mnfFormGridCtrl.mnfCrudShown &&
+             (mnfDoc._state === 'ready' || mnfFormGridCtrl.mnfSubdocumetsGrid === true)"
       class="mn-action-icon glyphicon glyphicon-trash"></span>
 <!-- <span class="loader"
       ng-show="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'deleting')"
