--- a/app/assets/javascripts/mohican/directives/mnf-commit-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-commit-grid/template.html
@@ -1,5 +1,7 @@
 <span ng-click="commitItem()"
-      ng-if="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
+      ng-if="mnfFormGridCtrl.mnfSubdocumetsGrid === false &&
+             mnfFormGridCtrl.mnfCrudShown &&
+             (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
       class="mn-action-icon glyphicon glyphicon-floppy-save"></span>
 <!-- <span class="loader"
       ng-show="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'committing')"
