one click save (second attempt)
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnf-edit-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-edit-grid/template.html
@@ -1,3 +1,5 @@
 <span ng-click="editItem()"
-      ng-if="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'ready' || mnfDoc._state === 'deleting')"
+      ng-if="mnfFormGridCtrl.mnfSubdocumetsGrid === false &&
+             mnfFormGridCtrl.mnfCrudShown &&
+             (mnfDoc._state === 'ready' || mnfDoc._state === 'deleting')"
       class="mn-action-icon glyphicon glyphicon-pencil"></span>
