--- a/app/assets/javascripts/mohican/directives/mnf-rollback-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-rollback-grid/template.html
@@ -1,3 +1,5 @@
 <span ng-click="rollbackItem()"
-      ng-if="mnfFormGridCtrl.mnfCrudShown && (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
+      ng-if="mnfFormGridCtrl.mnfSubdocumetsGrid === false &&
+             mnfFormGridCtrl.mnfCrudShown &&
+             (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
       class="mn-action-icon glyphicon glyphicon-remove-circle"></span>
