we are all correct size now
This allows grids to be not only 'fill heigh' against the window but
also against any parent container by specifying unique selector. So this
should work OK for most cases, for instance in one specified in this
commit, it is done against the body of a modal.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mnf-reference-grid/ref-resource-dialog.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference-grid/ref-resource-dialog.html
@@ -5,6 +5,7 @@
         <mn-grid owner="ctrl.refResourceController"
                  mn-select="single"
                  mn-select-type="check"
+                 mn-grid-fill-height="modal-body"
                  mn-on-select="ok(selectedItems);ctrl.refResourceController.onItemSelect(selectedItems)">
         </mn-grid>
       </div>
