ref field icon in same position in form as in grid
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnf-reference/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference/template.html
@@ -13,7 +13,7 @@
          ng-click="openRefDialog()"
          ng-disabled="mnfDoc._state === 'committing'"
          ng-class="{'changed': mnfDoc['_' + mnfField + '_changed']}">
-      <span class="col-sm-11 mn-form-control ref-edit-label">
+      <span class="mn-form-control ref-edit-label">
         {{mnfDoc._edit[mnfField]}}
       </span>
       <span class="glyphicon glyphicon-folder-open"></span>
