popDialog then promise in mnf-reference and mnf-reference-grid directives
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnf-reference-grid/ref-resource-dialog.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference-grid/ref-resource-dialog.html
@@ -6,7 +6,7 @@
                  mn-select="single"
                  mn-select-type="check"
                  mn-grid-fill-height="modal-body"
-                 mn-on-select="ok(selectedItems);ctrl.refResourceController.onItemSelect(selectedItems)">
+                 mn-on-select="ok(selectedItems)">
         </mn-grid>
       </div>
     </div>
