--- a/app/assets/javascripts/mohican/directives/mnf-reference/ref-resource-dialog.html
+++ b/app/assets/javascripts/mohican/directives/mnf-reference/ref-resource-dialog.html
@@ -5,7 +5,7 @@
         <mn-grid owner="ctrl.refResourceController"
                  mn-select="single"
                  mn-select-type="check"
-                 mn-on-select="ok(selectedItems);ctrl.refResourceController.onItemSelect(selectedItems)">
+                 mn-on-select="ok(selectedItems)">
         </mn-grid>
       </div>
     </div>
